--- a/ManasaK_RadarChart_Class_Activity.ipynb
+++ b/ManasaK_RadarChart_Class_Activity.ipynb
@@ -6,7 +6,7 @@
       "name": "ManasaK_RadarChart_Class Activity.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPqct4Fp6BtcTlV3ed9TOA4",
+      "authorship_tag": "ABX9TyPaqkULTtHYuS9A330G+zMy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,13 +35,12 @@
         "\n",
         "import math\n",
         "\n",
-        "\n",
         "AA=pd.DataFrame(columns = ['criteria','weight','ratingA','ratingB','scoreA','scoreB'])\n"
       ],
       "metadata": {
         "id": "dPyPaW2vVRQE"
       },
-      "execution_count": 18,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -52,13 +51,13 @@
         "print(AA)"
       ],
       "metadata": {
+        "id": "COZySw8jRVKV",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "COZySw8jRVKV",
-        "outputId": "10fe1463-8bce-48fb-b446-834a28963f85"
+        "outputId": "d54c8297-3c0a-49c3-dfe0-44dd952c9bcc"
       },
-      "execution_count": 19,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -81,13 +80,13 @@
         "print(AA)\n"
       ],
       "metadata": {
+        "id": "f4d_iabpR-dM",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "f4d_iabpR-dM",
-        "outputId": "101b735d-ad9f-4dbb-c1c0-96a13a246e2a"
+        "outputId": "af19f92f-e50a-4510-ad8c-de538749e465"
       },
-      "execution_count": 20,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,13 +111,13 @@
         "print(AA)"
       ],
       "metadata": {
+        "id": "1EFhoTSjRvNw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "1EFhoTSjRvNw",
-        "outputId": "513d2f38-2d2d-4544-bdf9-d0dff9c50dd4"
+        "outputId": "4a16a0bf-7ee6-4188-9780-1d0a927ba056"
       },
-      "execution_count": 21,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,29 +136,47 @@
     {
       "cell_type": "code",
       "source": [
-        "AA['scoreA'] = [0.9,0.6,0.6,2.4,0.5]\n",
-        "AA['scoreB'] = [0.3,0.45,0.8,2.4,0.7]\n",
+        "for index, row in AA.iterrows():\n",
+        "    AA['scoreA'][index]=row['ratingA']*row['weight']\n",
+        "    AA['scoreB'][index]=row['ratingB']*row['weight']\n",
+        "\n",
         "print(AA)"
       ],
       "metadata": {
+        "id": "NV96Pgc5SC8F",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "NV96Pgc5SC8F",
-        "outputId": "2bf7d9af-7398-4cab-c7ff-ee5631d3a665"
+        "outputId": "e18bb9c1-1fd0-47d2-b592-4be3e92a662e"
       },
-      "execution_count": 22,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "               criteria  weight  ratingA  ratingB  scoreA  scoreB\n",
-            "0                  risk    0.15        6        2     0.9    0.30\n",
-            "1                   ROI    0.15        4        3     0.6    0.45\n",
-            "2  customerSatisfaction    0.20        3        4     0.6    0.80\n",
-            "3           feasibility    0.40        6        6     2.4    2.40\n",
-            "4    strategicAlignment    0.10        5        7     0.5    0.70\n"
+            "               criteria  weight  ratingA  ratingB scoreA scoreB\n",
+            "0                  risk    0.15        6        2    0.9    0.3\n",
+            "1                   ROI    0.15        4        3    0.6   0.45\n",
+            "2  customerSatisfaction    0.20        3        4    0.6    0.8\n",
+            "3           feasibility    0.40        6        6    2.4    2.4\n",
+            "4    strategicAlignment    0.10        5        7    0.5    0.7\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  This is separate from the ipykernel package so we can avoid doing imports until\n"
           ]
         }
       ]
@@ -176,13 +193,13 @@
         "print('the total score for A is {:.2f} and for B is {:.2f}'.format(totalScoreA,totalScoreB))\n"
       ],
       "metadata": {
+        "id": "xxdT_625aQ9Y",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "xxdT_625aQ9Y",
-        "outputId": "7a095f06-abaa-4388-b605-b18563600fa3"
+        "outputId": "87fea968-71d6-4abc-f6f5-b136cf78c028"
       },
-      "execution_count": 23,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,9 +239,9 @@
           "height": 516
         },
         "id": "MvZt6xdtbh-m",
-        "outputId": "75ca0946-8261-49a1-bf60-55178428b0c0"
+        "outputId": "d85f208f-2e2a-46a9-952b-24dc8d7d0855"
       },
-      "execution_count": 27,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
